# quanlaidian-quote-service

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.en.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: changelog-check.yml
app/: audit.py  auth.py  cli.py  config.py  errors.py  main.py  storage.py  timezone.py  version.py
app/api/: catalog.py  files.py  health.py  quote.py  quotes.py
app/domain/: catalog_descriptions.py  pricing.py  pricing_baseline.py  product_descriptions.py  quote_service.py  render_pdf.py  render_xlsx.py  render_xlsx_header_watermark.py  schema.py
app/persistence/: __init__.py  db.py  models.py  quote_repo.py  token_repo.py
data/: pricing_baseline.example.json  tokens.json
docs/: pricing-algorithm.md
ops/: audit_report.py  extract_baseline_from_xlsx.py  extract_descriptions_from_xlsx.py  migrate_baseline.py  nginx.conf.example  obfuscate_baseline.py  runbook.md
ops/cron/: audit-report.sh  cleanup-files.sh  crontab.example
ops/systemd/: quanlaidian-quote.service
references/: pricing_baseline_v5.obf  product_catalog.md  product_descriptions.json
scripts/: bump_version.py
tests/: conftest.py  test_api.py  test_audit.py  test_audit_report.py  test_auth.py  test_cli.py  test_errors.py  test_persistence.py  test_pricing.py  test_product_descriptions.py  test_render.py  test_schema.py  test_storage.py  test_tax_id_bundling.py  test_timezone.py  test_token_repo.py  test_version.py
tests/fixtures/: form_full_meal_10_stores.json  form_full_meal_with_brand_program.json  (+3 more)
